--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Sensor App</string>
+    <string name="main.tab.compass">Compass</string>
+    <string name="main.tab.spiritLevel">Spirit Level</string>
+    <string name="main.tab.exporter">Exporter</string>
 </resources>
