Add strings for sensor names and categories

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,30 @@
     <string name="main.tab.recorder">Recorder</string>
 
     <string name="recorder.helloWorld">Hello World!</string>
+
+    <string name="sensorCategory.motion">Motion sensors</string>
+    <string name="sensorCategory.environment">Environment sensors</string>
+    <string name="sensorCategory.position">Position sensors</string>
+    <string name="sensorCategory.unknown">Unknown</string>
+
+    <string name="sensor.accelerometer">Accelerometer</string>
+    <string name="sensor.gravity">Gravity</string>
+    <string name="sensor.gyroscope">Gyroscope</string>
+    <string name="sensor.gyroscopeUncalibrated">Gyroscope Uncalibrated</string>
+    <string name="sensor.linearAcceleration">Linear Acceleration</string>
+    <string name="sensor.rotationVector">Rotation Vector</string>
+    <string name="sensor.significantMotion">Significant Motion</string>
+    <string name="sensor.stepCounter">Step Counter</string>
+    <string name="sensor.stepDetector">Step Detector</string>
+    <string name="sensor.gameRotationVector">Game Rotation Vector</string>
+    <string name="sensor.geomagneticRotationVector">Geomagnetic Rotation Vector</string>
+    <string name="sensor.magneticField">Magnetic Field</string>
+    <string name="sensor.magneticFieldUncalibrated">Magnetic Field Uncalibrated</string>
+    <string name="sensor.orientation">Orientation</string>
+    <string name="sensor.proximity">Proximity</string>
+    <string name="sensor.ambientTemperature">Ambient Temperature</string>
+    <string name="sensor.light">Light</string>
+    <string name="sensor.pressure">Pressure</string>
+    <string name="sensor.relativeHumidity">Relative Humidity</string>
+    <string name="sensor.temperature">Temperature</string>
 </resources>
