Add Recorder to BottomNavigationActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,13 +2,17 @@
     <string name="app_name">Sensor App</string>
     <string name="menu.compass">Compass</string>
     <string name="menu.spiritLevel">Spirit Level</string>
+    <string name="menu.recorder">Recorder</string>
+
     <string name="compass.title">Compass</string>
     <string name="compass.currentLowPassFilterValue">Low-pass filter: %1$d%%</string>
     <string name="compass.ratioButtons.hardwareSensor">Hardware Sensor</string>
     <string name="compass.ratioButtons.softwareSensor">Software Sensor</string>
+
     <string name="spiritLevel.title">Spirit Level</string>
     <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
 
+    <string name="recorder.title">Recorder</string>
     <string name="recorder.helloWorld">Hello World!</string>
 
     <string name="sensorCategory.motion">Motion sensors</string>
