--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="recorder.title">Recorder</string>
     <string name="recorder.helloWorld">Hello World!</string>
 
+    <string name="recorder.settings.title">Recorder Settings</string>
+
     <string name="sensorCategory.motion">Motion sensors</string>
     <string name="sensorCategory.environment">Environment sensors</string>
     <string name="sensorCategory.position">Position sensors</string>
