Add menu to RecorderFragment to open RecorderSettingsActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
 
     <string name="recorder.title">Recorder</string>
+    <string name="recorder.menu.settings">Settings</string>
     <string name="recorder.helloWorld">Hello World!</string>
 
     <string name="recorder.settings.title">Recorder Settings</string>
