Add ViewPager and LineCharts to RecorderPresenter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,8 @@
     <string name="recorder.stopRecordingDialog.message">Should the recording be stopped?</string>
     <string name="recorder.stopRecordingDialog.cancel">Cancel</string>
     <string name="recorder.stopRecordingDialog.stop">Stop</string>
+    <string name="recorder.noSensorsEnabled.hint">No sensors enabled. Go to settings to enabled sensors.</string>
+    <string name="recorder.noSensorsEnabled.openSettings">Open Settings</string>
 
     <string name="recorder.settings.title">Recorder Settings</string>
 
